Fixing spacing on the resume

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: .1em;
   }
 
   
@@ -74,7 +75,7 @@
   .italics {
     font-style: italic;
     color: var(--secondary-color);
-    margin-bottom: 0.5em;
+    /*margin-bottom: 0.5em;*/
   }
   
   p {
@@ -101,7 +102,7 @@
   }
   
   .dashed-list li::before {
-    content: " - ";
+    content: "- ";
     margin-right: 0.5rem;
     color: var(--secondary-color);
   }
